--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <p>Download Excursion (Coming soon!)</p>
   </body>
 </html>
