--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Discover hidden places in the world around you</h1>
     <p>Download Excursion (Coming soon!)</p>
     <p>testtest</p>
+    <p>testesttest</p>
   </body>
 </html>
