--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p>Download Excursion (Coming soon!)</p>
-    <p>testtest</p>
-    <p>testesttest</p>
+
+    <video autoplay src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video>
   </body>
 </html>
