--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Discover hidden places in the world around you</h1>
     <p>Download Excursion (Coming soon!)</p>
 
-    <video autoplay src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video>
+    <p><video autoplay src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video></p>
   </body>
 </html>
