--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excursion (Coming soon!)</p>
+    <p class="mainHeader">Download Excursion (Coming soon!)</p>
 
-    <p><video autoplay src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video></p>
+    <p class="video"><video autoplay src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video></p>
   </body>
 </html>
