--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p class="mainHeader">Download Excursion (Coming soon!)</p>
+    <p class="dllink"><a href"">Download Excursion (Coming soon!)</a></p>
 
-    <p class="video"><video autoplay src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4"></video></p>
+    <p><video autoplay src="./resources/videos/excursion.mp4"></video></p>
+
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.<h3/>
+    <p><image src="./resources/images/camp.jpg"/></p>
+
+    <p><image src="./resources/images/phone.jpg"/></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <p class="dllink"><a href="">Download Excursion (Coming soon!)</a></p>
+
+    <h3 class="copyright">(c) Excursion</h3>
   </body>
 </html>
