Final complete version

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
     <p class="dllink"><a href="">Download Excursion (Coming soon!)</a></p>
 
-    <h3 class="copyright">(c) Excursion</h3>
+    <h3 class="copyright">© Excursion</h3>
   </body>
 </html>
